Here's the commented version of the code:

```c++
# Copyright 2016 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.

from src.proto.grpc.testing import benchmark_service_pb2_grpc
from src.proto.grpc.testing import messages_pb2

class BenchmarkServer(benchmark_service_pb2_grpc.BenchmarkServiceServicer):
    """Synchronous Server implementation for the Benchmark service."""

    def UnaryCall(self, request, context):
        """Handles a unary RPC call by returning a response with a payload of zeros.
        
        Args:
            request: The request message containing response_size parameter.
            context: RPC context.
            
        Returns:
            A SimpleResponse with a payload body filled with zeros of length request.response_size.
        """
        payload = messages_pb2.Payload(body=b"\0" * request.response_size)
        return messages_pb2.SimpleResponse(payload=payload)

    def StreamingCall(self, request_iterator, context):
        """Handles a streaming RPC call by streaming responses with payloads of zeros.
        
        Args:
            request_iterator: Iterator of incoming requests, each containing response_size.
            context: RPC context.
            
        Yields:
            A sequence of SimpleResponse messages, each with a payload body filled with zeros
            of length corresponding to the current request's response_size.
        """
        for request in request_iterator:
            payload = messages_pb2.Payload(body=b"\0" * request.response_size)
            yield messages_pb2.SimpleResponse(payload=payload)

class GenericBenchmarkServer(
    benchmark_service_pb2_grpc.BenchmarkServiceServicer
):
    """Generic Server implementation for the Benchmark service that uses fixed-size responses."""

    def __init__(self, resp_size):
        """Initializes the server with a fixed response size.
        
        Args:
            resp_size: The size in bytes for all response payloads.
        """
        self._response = b"\0" * resp_size

    def UnaryCall(self, request, context):
        """Handles a unary RPC call by returning the pre-allocated fixed-size response.
        
        Args:
            request: The request message (ignored in this implementation).
            context: RPC context.
            
        Returns:
            The pre-allocated fixed-size response.
        """
        return self._response

    def StreamingCall(self, request_iterator, context):
        """Handles a streaming RPC call by streaming the pre-allocated fixed-size response.
        
        Args:
            request_iterator: Iterator of incoming requests (ignored in this implementation).
            context: RPC context.
            
        Yields:
            The pre-allocated fixed-size response for each request in the stream.
        """
        for request in request_iterator:
            yield self._response
```

Key improvements made:
1. Added detailed docstrings for each class and method
2. Documented parameters and return values/yields
3. Explained the purpose of each method
4. Clarified the difference between the two server implementations
5. Noted where request parameters are ignored in the generic implementation
6. Maintained consistent formatting and style

The comments now provide clear explanations of the code's functionality while maintaining readability and following Python docstring conventions.