Here's the commented version of the code:

```c++
# Copyright 2020 The gRPC Authors

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.
"""The Python AsyncIO Benchmark Servicers."""

import asyncio
import logging
import unittest

from grpc.experimental import aio

from src.proto.grpc.testing import benchmark_service_pb2_grpc
from src.proto.grpc.testing import messages_pb2

class BenchmarkServicer(benchmark_service_pb2_grpc.BenchmarkServiceServicer):
    """Implementation of the BenchmarkService using protocol buffers."""
    
    async def UnaryCall(self, request, unused_context):
        """Handle unary RPC call by returning a SimpleResponse with a payload.
        
        Args:
            request: The request message containing response_size.
            unused_context: The RPC context (unused in this implementation).
            
        Returns:
            A SimpleResponse with a payload body filled with null bytes
            of length specified in request.response_size.
        """
        payload = messages_pb2.Payload(body=b"\0" * request.response_size)
        return messages_pb2.SimpleResponse(payload=payload)

    async def StreamingFromServer(self, request, unused_context):
        """Handle server streaming RPC by continuously sending responses.
        
        Args:
            request: The request message containing response_size.
            unused_context: The RPC context (unused in this implementation).
            
        Yields:
            Infinite stream of SimpleResponse messages with payload body
            filled with null bytes of length specified in request.response_size.
        """
        payload = messages_pb2.Payload(body=b"\0" * request.response_size)

        while True:
            yield messages_pb2.SimpleResponse(payload=payload)

    async def StreamingCall(self, request_iterator, unused_context):
        """Handle bidirectional streaming RPC.
        
        Args:
            request_iterator: Async iterator of incoming requests.
            unused_context: The RPC context (unused in this implementation).
            
        Yields:
            For each received request, yields a SimpleResponse with payload body
            filled with null bytes of length specified in request.response_size.
        """
        async for request in request_iterator:
            payload = messages_pb2.Payload(body=b"\0" * request.response_size)
            yield messages_pb2.SimpleResponse(payload=payload)

class GenericBenchmarkServicer(
    benchmark_service_pb2_grpc.BenchmarkServiceServicer
):
    """Generic (no-codec) Server implementation for the Benchmark service.
    
    This servicer handles requests without protocol buffer encoding/decoding,
    working with raw bytes instead.
    """

    def __init__(self, resp_size):
        """Initialize the servicer with a fixed response size.
        
        Args:
            resp_size: The size of the response body in bytes.
        """
        self._response = "\0" * resp_size

    async def UnaryCall(self, unused_request, unused_context):
        """Handle unary RPC call by returning a pre-allocated response.
        
        Args:
            unused_request: The request message (ignored).
            unused_context: The RPC context (unused in this implementation).
            
        Returns:
            The pre-allocated response string of null bytes.
        """
        return self._response

    async def StreamingCall(self, request_iterator, unused_context):
        """Handle bidirectional streaming RPC with pre-allocated responses.
        
        Args:
            request_iterator: Async iterator of incoming requests (ignored).
            unused_context: The RPC context (unused in this implementation).
            
        Yields:
            For each received request, yields the pre-allocated response string.
        """
        async for _ in request_iterator:
            yield self._response
```